<resources>
    <string name="app_name" translatable="false">baladiti</string>
    <string name="Open" translatable="false">baladiti</string>
    <string name="Close" translatable="false">baladiti</string>
    <string name="اchakawi">التصرف في الشكاوى</string>
    <string name="matbo3at">"الوثائق البلدية "</string>
    <string name="majlis"> تركيبة المجلس البلدي</string>
    <string name="nafadh"> النفاذ إلى المعلومة</string>
    <string name="istitla3">إستطلاعات الرأي</string>
    <string name="dalil"> دليل المؤسسات</string>
    <string name="hisab">إنشاء حساب</string>
    <string name="barid">البريد الالكتروني</string>
    <string name="kalimt">كلمة المرور</string>
    <string name="nasit">نسيت كلمة المرور ؟</string>
    <string name="do5oul">دخول</string>
    <string name="ism">الاسم</string>
    <string name="la9ab">اللقب</string>
    <string name="tasjil">تسجيل</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="fragment11" translatable="false">fragment11</string>
    <string name="fragment22" translatable="false" />
    <string name="fragment33" translatable="false" />
    <string name="tahrir">تحرير طلب</string>
    <string name="matlib" translatable="false">مطالب النفاذ إلى المعلومة</string>
    <string name="baladiti">بلديتي</string>
    <string name="konya" translatable="false">الكنية :</string>
    <string name="info" translatable="false">منصة إلكترونية بلدية للإدارة الذكية موجهة نحو إستيعاب البلديات التونسية </string>
    <string name="okay" translatable="false">تم الاطلاع</string>
    <string name="paragraphe" translatable="false">
التعريف :
\n\n
تخضع العقارات المبنية الكائنة بالمناطق الراجعة بالنظر للمنطقة البلدية  لمعلوم  يسمى “المعلوم على العقارات المبنية ” باستثناء العقارات المعدة لتعاطي الأنشطة الخاضعة للمعاليم  المشار إليها بالفصلين 35 و 41 من مجلة الجباية المحلية.
\n\n
آجال الدفع :
\n\n
 يستوجب الدفع بتاريخ  غرة جانفي من كل سنة.
\n\n

\n\n
المطالبون بالمعلوم :
\n\n
 يستوجب المعلوم على العقارات المبنية على  :
\n\n
– مالك العقار

– المنتفع به

– في صورة غياب المذكورين أعلاه يستوجب المعلوم على حائز العقار أو شاغله
\n\n
 \n\n
\n\n
الإعفـــــــــــــــاءات:
\n\n
 تعفى من المعلوم:
\n\n
– العقارات المبنية التي تملكها الدولة والمؤسسات العمومية ذات الصبغة الإدارية أو الجماعات المحلية مالم تكن مسوغة.

– المساجد والعقارات المبنية المخصصة للتعبد والزوايا.

– العقارات المبنية التي تملكها الدول الأجنبية المعدة لإيواء المصالح الإدارية أو الدبلوماسية شريطة المعاملة بالمثل.

– العقارات المبنية التي تملكها المنظمات العالمية المتمتعة بالصفة الديبلوماسية.

– العقارات المبنية التي تملكها أو تشغلها بدون مقابل الجمعيات الخيرية و الاسعافية أو الجمعيات المعترف بها والتي لها بصبغة المصلحة العامة على أن تخصص هذه العقارات لممارسة نشاطها.
\n\n
 \n\n
\n\n
الواجبــــــــــات :
\n\n
– يتعين على المطالب بالمعلوم تحرير و إيداع تصريح لدى المصالح المختصة للجماعات المحلية حسب أنموذج توفره الإدارة و ذلك خلال الثلاثين يوما الموالية لبداية عملية الاحصاء.

– بعد عملية الإحصاء: يجب على كل مالك لعقار إعلام البلدية في اجل لا يتجاوز الثلاثين يوما بواسطة تصريح توفره الإدارة بالنسبة للبناءات الجديدة و البناءات التي تم توسيعها أو إعلاؤها أو التي انتهت مدة شغورها أو التي أصبحت خاضعة للمعلوم على العقارات المبنية.

– يتعين على المالك السابق في صورة نقل ملكية عقارية إعلام البلدية بواسطة تصريح توفره الإدارة أو رسالة مضمونة الوصول مدعمة بسند قائم الموجبات.
\n\n
أساس المعلوم ونسبه :
المرجع: الفصل 4 من مجلة الجباية المحلية
\n\n
أساس المعلوم :  %2  من الثمن المرجعي للمتر المربع لكل صنف من أصناف العقارات المبنية X المساحة المغطاة</string>
    <string name="paragraphe_copie" translatable="false">الاشهاد بمطابقة النسخ للاصل :\n\n
\n\n
الوثائق المطلوبة :\n\n
– الوثيقة الأصلية لكل نسخة أو عدة نسخ يريد إشهاد مطابقتها للأصل.
\n\n
– هوية مقدم الوثيقة.
\n\n
مراحل الخدمة :\n\n
تقديم الوثيقة الأصلية لكل نسخة أو عدة نسخ يريد إشهاد مطابقتها للأصل إلى أعوان مصلحة الحالة المدنية.
\n\n
\n\n
ملاحظات :\n\n
– يمنع الإشهاد بمطابقة النسخ للأصل على الوثائق المنافية للأخلاق الحميدة أو تحتوي على مس بأمن الدولة.
\n\n
– تعفى الوثائق الإدارية المقدمة من طرف مصالح الدولة, الجماعات المحلية أو المؤسسات العمومية ذات الصبغة الإدارية من الأداء.
\n\n
– و عندما يتعلق الأمر بلغة أجنبية غير المستعملة عموما لدى الإدارات المعنية فإنه يتعين على طالب الخدمة أن يستظهر بوثيقة مترجمة من مترجم مرسم بجدول المترجمين المحلفين و ذلك ليتسنى تضمين ملخص لموضوعها بدفتر تسجيلها المخصص لعمليات الإشهاد بالمطابقة للأصل.
\n\n
المصلحة :\n\n
– مصلحة الحالة المدنية بالبلدية</string>
    <string name="paragraphe_pub" translatable="false">لمراجع التشريعية و الترتيبية
\n\n
الفصل81 الفقرة الأولى من القانون الأساسي للبلديات عدد 33 لسنة 1975 المؤرخ في 14 ماي 1975 كما تم إتمامه وتنقيحه بالنصوص اللاحقة
\n\n
الفصل 86 من القانون عدد 11 لسنة 1997 المؤرخ في 3 فيفري 1997 المتعلق بإصدار مجلة الجباية المحلية كما تم إتمامه وتنقيحه بالنصوص اللاحقة
\n\n
القانون عدد 59 لسنة 2006 المؤرخ في 14 أوت 2006 المتعلق بمخالفات تراتيب حفظ الصحة في المناطق التابعة للجماعات المحلية
\n\n
الأمر عدد 656لسنة 1987 المؤرخ في 20 فيفري 1987 المتعلق بضبط شروط وصيغ إقامة ركائز اشهارية على ملك الدولة العمومي للطرقات أو على الأملاك المجاورة له
\n\n
الأمر عدد 1428 لسنة 1998 المؤرخ في 13 جويلية 1998 المتعلق بضبط تعريفة المعاليم المرخص للجماعات المحلية في استخلاصها
\n\n
الأمر عدد 1866 لسنة 2007 المؤرخ في 23 جويلية 2007 المتعلق بضبط قائمة المخالفات لتراتيب حفظ الصحة بالمناطق الراجعة للجماعات المحلية والخطايا المستوجبة
\n\n
القرار البلدي المتعلق بضبط تعريفة المعاليم المرخص للجماعات المحلية في استخلاصها
\n\n
كراس الشروط البلدية المتعلقة بالإشهار والمعلقات الإشهارية
شروط الانتفاع بالخدمة
\n\n
تستوجب الرخصة لكل المعدات أو الرسوم أو الكتابة سواء تعلق الأمر بمعلقة اشهارية على الطريق العام، أوعلامة مضيئة أو غير مضيئة أو كتابة على واجهة محل تجاري أو غير تجاري ومهما كان موضوعها تجاريا أو لا، وبصرف النظر عن طريقة انجازها أو القائم بانجازها
\n\n
يمنع تركيز معدات اشهارية إذا احتوى مضمونها على;
* تحديد منطقة مع سهم توجيهي أو مسافة كيلومترية
* تقليد علامة مرورية أو إشارة	\n\n
الوثائق المطلوبة
\n\n
مطلب باسم السيد رئيس البلدية ممضى من الطالب يتضمن المعطيات اللازمة ;الموقع المطلوب، المساحة، مدة الإشغال، العنوان، وبيان الحاجة
الأمثلة أو الرسوم على أن تكون واضحة من حيث المحتوى والشكل والمقاييس بالنسبة للعلامة أو النص والمساحة المزمع إشغالها بالواجهة بالنسبة للكتابة
\n\n
مكان إيداع الملف
\n\n
المصلحة البلدية ذات النظر أو الدائرة البلدية
\n\n
مكان الحصول على الخدمة
\n\n
المصلحة البلدية ذات النظر أو الدائرة البلدية
\n\n
أجل الانتفاع بالخدمة
\n\n
20 يوم من تاريخ إيداع المطلب
ملاحظات
\n\n
الرخصة صالحة لمدة قصوى قدرها سنة قابلة للتجديد وفقا للسلطة التقديرية المطلقة للإدارة</string>
    <string name="paragraphe_con" translatable="false">
شروط الانتفاع بالخدمة \n\n
أن يكون المواطن مالكا للعقار المزمع إقامة البناء عليه
أن تكون هذه القطعة متأتية من تقسيم مصادق عليه وأن لا تتناقض صبغتها والتخصيص الوارد بمثال التهيئة للمنطقة
احترام التراتيب المعمول بها في خصوص حماية الأراضي الفلاحية وفي خصوص الآثار والمعالم التاريخية والمواقع الطبيعية والعمرانية وفي خصوص المناطق المصانة
أن يتقدّم المواطن بملف تام الموجب طبقا للتشريع الجاري به العمل
 \n\n
\n\n
الوثائق المطلوبة :
\n\n
مطلب على ورق عادي ممضى من قبل طالب الرخصة أو من ينوبهه
شهادة ملكية أو حكم استحقاقي أو وثيقة أخرى في تملك الطالب لقطعة الأرض المزمع إقامة البناء عليها
بطاقة إرشادات فنية تسلم من قبل الإدارة ممضاة من طرف المهندس المعماري مصمم المشروع باستثناء الحالات التي لا تقتضي اللجوء إلى مهندس معماري لإعداد رسوم مشاريع البناء
مشروع بناء في 5 نظائر معدّ وجوبا من طرف مهندس معماري يتضمن مثال موقعي للعقار ومثال جملي مقياسه 1/500 فما فوق وتصاميم مختلف الطوابق وأمثلة المقاطع المحددة للأطوال وكذلك الواجهات بمقياس 1/100 فما فوق ومثال في الهيكل
الحامل للمبنى معد من قبل مكتب دراسات أو من طرف مهندس مختص مرسم بجدول عمادة المهندسين
 دراسة تتعلق بمؤثرات المشروع على المحيط
قرار تصفيف إذا كانت قطعة الأرض المزمع إقامة البناء عليها محاذية للملك العمومي للطرقات أو الملك العمومي البحري أو الملك العمومي للسكك الحديدية أو لأحد مكونات الملك العمومي للمياه
الرخص الإدارية المتعلقة بوضعية قطعة الأرض إن كانت محاذية لمنطقة خاضعة لارتفاقات خاصة
وصل إيداع التصريح بالضريبة على دخل الأشخاص الطبيعيين أو الضريبة على الشركات
وصل خلاص المعاليم الموظفة على العقار موضوع مطلب رخصة البناء
ملف سلامة مصادق عليه من قبل مصالح الحماية المدنية بالنسبة إلى البنايات الخاضعة لنظام الوقاية والسلامة من أخطار الحريق والانفجار والفزع
* ملاحظة : \n\n
\n\n
علاوة على الوثائق المنصوص عليها أعلاه، يجب أن يتضمن مشروع إعادة التهيئة أو إعادة التخصيص لعقار محمي أو مرتب أو كائن داخل مجموعة تاريخية أو
تقليدية أو موقع ثقافي الوثائق التالية، كلّ في نظيرين
مثال موقعي للعقار
مثال جملي مقياسه 500/1 فما فوق
تشخيص مدقق لمختلف الطوابق مقياسه 1/50
أمثلة المقاطع المحددة للارتفاعات وكذلك الواجهات بمقياس 1/50
تشخيص للهياكل
تشخيص مجمل العناصر الزخرفية بمقياس 1/20
 \n\n
\n\n
المراحل
مراحل الخدمة
\n\n
إيداع ملف تامٌ الموجب
دراسة الملف وإجراء معاينة ميدانية عند الاقتضاء
عرض الملف على اللجنة الفنية لرخص البناء
بعد استيفاء كل الشروط القانونية والترتيبية، يتم إعداد قرار في الترخيص في البناء أو الرفض المعلل
تسليم الرخصة بعد دفع المعاليم المستوجبة في الغرض
الأطراف المتدخلة
\n\n
المعني بالأمر
البلدية (المصلحة الفنية) أو الولاية حسب مرجع النظر الترابي
الآجال
\n\n
خلال 21 يوما من تاريخ إيداع ملف تام الموجب
خلال 45 يوما إذا كانت البناية في منطقة مثال تهيئتها بصدد الإنجاز
خلال 60 يوما في صورة وجود البناية في حدود 200 م من المواقع الطبيعية أو الثقافية أو الأثرية أو المصانة أو التاريخية
 \n\n
\n\n
مكان إيداع الملف:
\n\n
المصلحة
المصلحة الفنية بالجماعة المحلية (بلدية أو مجلس جهوي حسب مرجع النظر الترابي)
العنوان
المصلحة الفنية بالجماعة المحلية (بلدية أو مجلس جهوي حسب مرجع النظر الترابي)
\n\n

مكان الحصول على الخدمة
المصلحة
المصلحة الفنية بالجماعة المحلية (بلدية أو مجلس جهوي حسب مرجع النظر الترابي )
العنوان
المصلحة الفنية بالجماعة المحلية (بلدية أو مجلس جهوي حسب مرجع النظر الترابي )

    \n\n
أجل الحصول على الخدمة
\n\n
خلال 21 يوما من تاريخ ايداع ملف تام الموجب
خلال 45 يوما اذا كانت البناية في منطقة مثال تهيئتها بصدد الإنجاز
خلال 60 يوما في صورة وجود البناية في حدود 200 م من المواقع الطبيعية أو الثقافية أو الأثرية أو المصانة أو التاريخية
* ملاحظة: يسلم طالب الرخصة وصل في الغرض

\n\n
المراجع التشريعية
مجلة التهيئة الترابية والتعمير الصادرة بمقتضى القانـون عدد 122 لسنة 1994 المؤرخ في 28 نوفمبر 1994 المتعلق بإصدار
مجلة التهيئة الترابية والتعمير والنصوص المنقحة والمتممة له
القانون عدد 87 لسنة 1983 المؤرخ في 11 نوفمبر 1983 حول حماية الأراضي الفلاحية
القانـون عدد 35 لسنة 1986 المؤرخ في 9 ماي 1986 حول حمايـة الآثار والمواقع الطبيعية والعمرانية
قرار وزيرة التجهيز والإسكان والتهيئة الترابية المؤرخ في 17 أفريل 2007 المتعلق بضبط الوثائق المكونة لملف رخصة البناء وأجل صلوحيتها والتمديد فيها وشروط تجديدها
المنشور عدد 5 بتاريخ 14 مارس 2003 المتعلق بتقليص آجال تسليم رخص البناء
 \n\n

توصيات هامة
منح الرخصة لطالبها لا يمس بحقوق الغير
كل متحصل على رخصة بناء يتولى وجوبا تعليق لوحة بمدخل الحضيرة تتضمن معلومات حول عدد الرخصة وتاريخها ومكان صدورها
المخالفات للأحكام المتعلقة برخص البناء وكذلك البناء دون رخصة تنجر عنهما عقوبات عدة تضمنها العنوان الرابع من مجلة التهيئة الترابية والتعمير
تُعفى من تقديم أمثلة معدة من طرف مهندس معماري البناءات التي لا تتجاوز مساحتها 80 م م وكذلك إذا تعلق الأمر بتوسيع  مسكن قائم الذات لم تتجاوز جملة مساحته المغطاة بعد التوسيع 100 م م
تتولى المصالح المختصة للجماعة المحلية المعنية في أجل أسبوع من تاريخ اتخاذ القرار إعلام طالب الرخصة بالموافقة أو بالرفض وذلك برسالة مضمونة الوصول في أجل أسبوع من تاريخ اتخاذ القرار ودعوته عند الاقتضاء إلى تسلم رخصة البناء في أجل أقصاه شهر من تاريخ ذلك الإعلام وإلاّ عدّت غير ساريةالمفعول
تدوم صلوحية رخصة البناء ثلاث سنوات ابتداء من تاريخ إعلام صاحبها بالموافقة وتٌمدد هذه الصلوحية لنفس الأجل وذلك بتقديم
مطلب عادي في صورة ما إذا لم يحصل تغيير في مشروع البناء، ويجب أن يرد هذا المطلب على البلدية أو المعتمدية المعنية قبل شهر من انقضاء مدة صلوحية قرار رخصة البناء المراد التمديد فيها</string>
</resources>