<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/s1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="265dp"
                android:layout_marginTop="1dp"
                android:onClick="openSignupPage"
                android:text="@string/hisab"
                android:textColor="#2CA7E0"
                android:textSize="19sp"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/log"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/log_f" />


        <EditText
            android:id="@+id/email1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/barid"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#808080"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/kalimt"
            android:textAlignment="textEnd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#808080"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nasit"
            android:textColor="#2CA7E0"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/se_connecter"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:text="@string/do5oul"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginStart="100dp"
            android:text="mamunicipalite.tn"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="	#FF8C00	"/>



    </LinearLayout>










</androidx.constraintlayout.widget.ConstraintLayout>