<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Demande_information">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#C0C0C0"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/nafadh"
        app:titleMarginStart="140dp"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_info"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabIndicatorColor="#555151">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tahrir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahrir" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/matlib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matlib" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/nafadh_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nafadh" />




    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_info"
        android:layout_width="match_parent"
        android:layout_height="713dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_info" />

</androidx.constraintlayout.widget.ConstraintLayout>