<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="ScrollViewCount">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"

            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/log"
                android:layout_width="262dp"
                android:layout_height="195dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:src="@drawable/log_f" />


            <EditText
                android:id="@+id/nom"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/ism"
                android:padding="10dp"
                android:textColorHint="#808080"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/Prenom"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/la9ab"
                android:padding="10dp"
                android:textColorHint="#808080"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/barid"
                android:padding="10dp"
                android:textColorHint="#808080"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/n_tel"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit"
                android:drawableLeft="@drawable/call"
                android:drawablePadding="10dp"
                android:hint="رقم الهاتف"
                android:padding="10dp"
                android:textColorHint="#808080"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/kalimt"
                android:padding="10dp"
                android:textColorHint="#808080"
                android:textStyle="bold" />


            <Button
                android:id="@+id/tasjil"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/tasjil"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="140dp"
                android:layout_marginBottom="60dp"
                android:text="mamunicipalite.tn"
                android:textColor="	#FF8C00	"
                android:textSize="22sp"
                android:textStyle="bold" />


        </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>