<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/garadiant_background"
    android:orientation="vertical"
    tools:context=".Dashbord">




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="398dp"
            android:layout_height="45dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="247dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/baladiti"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#E0E0E0"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:paddingEnd="70dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#E0E0E0"/>

                <ImageButton
                    android:id="@+id/reclamation"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/edit_dashbord"
                    android:src="@drawable/ic_chakwa1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/اchakawi"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/a"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_dashbord"
                    android:src="@drawable/ic_matbo3at" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/matbo3at"
                    android:textColor="#000000"
                    android:textStyle="bold" />


                <ImageButton
                    android:id="@+id/mj"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_dashbord"
                    android:src="@drawable/ic_majlis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/majlis"
                    android:textColor="#000000"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#E0E0E0"/>

                <ImageButton
                    android:id="@+id/nafadh"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/edit_dashbord"
                    android:src="@drawable/ic_nafadh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/nafadh"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/istitla3"

                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_dashbord"
                    android:src="@drawable/ic_istitla3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/istitla3"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/dalil"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_dashbord"
                    android:src="@drawable/ic_book" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/dalil"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>




